[workspace]
resolver = "2"
members = [
  # "leaf/leaf-rpc-client-tui",
  "leaf/leaf-protocol",
  "leaf/leaf-protocol/macros",
  "leaf/leaf-protocol/types",
  "leaf/leaf-rpc-client",
  "leaf/leaf-rpc-client-cli",
  "leaf/leaf-rpc-proto",
  "leaf/leaf-rpc-server",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/commune-os/weird/"

# [patch.crates-io]
# iroh = { path = "../iroh/iroh" }
# iroh-base = { path = "../iroh/iroh-base" }
# iroh-blobs = { path = "../iroh/iroh-blobs" }
# iroh-docs = { path = "../iroh/iroh-docs" }
# iroh-gossip = { path = "../iroh/iroh-gossip" }
# iroh-metrics = { path = "../iroh/iroh-metrics" }
# iroh-net = { path = "../iroh/iroh-net" }
