[workspace]
resolver = "2"
members = [
  # "leaf/leaf-rpc-client-tui",
  "leaf/leaf-protocol",
  "leaf/leaf-protocol/macros",
  "leaf/leaf-protocol/types",
  "leaf/leaf-rpc-client",
  "leaf/leaf-rpc-client-cli",
  "leaf/leaf-rpc-proto",
  "leaf/leaf-rpc-server",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Weird / Leaf Contributors"]
documentation = "https://github.com/muni-town/agentic-fediverse/blob/main/leaf-protocol-draft.md"
repository = "https://github.com/muni-town/weird/"
keywords = ["p2p", "leaf", "protocol", "local-first", "offline"]
categories = ["network-programming"]
license = "BlueOak-1.0.0"

# [patch.crates-io]
# iroh = { path = "../iroh/iroh" }
# iroh-base = { path = "../iroh/iroh-base" }
# iroh-blobs = { path = "../iroh/iroh-blobs" }
# iroh-docs = { path = "../iroh/iroh-docs" }
# iroh-gossip = { path = "../iroh/iroh-gossip" }
# iroh-metrics = { path = "../iroh/iroh-metrics" }
# iroh-net = { path = "../iroh/iroh-net" }
