[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
gdata = { path = "../gdata" }
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
futures = { version = "0.3", default-features = false }
headers = "0.4.0"
http = "1.1.0"
iroh = { version = "0.17.0", default-features = false, features = ["fs-store"] }
once_cell = "1.19.0"
quic-rpc = "0.10.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", default-features = false, features = ["macros"] }
tower = { version = "0.4.13", features = ["filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"
