[package]
name = "gdata"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "smallvec/serde", "smallstr/serde"]

[dependencies]
anyhow = "1.0.86"
cobs = "0.2.3"
futures = { version = "0.3.30", default-features = false }
iroh = { version = "0.17.0", default-features = false }
quic-rpc = "0.10.1"
quick_cache = "0.5.1"
smallstr = "0.3.0"
smallvec = "1.13.2"
ulid = "1.1.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = "1.38.0"
