[package]
name = "gdata"
version = "0.0.1"
description = "A graph layer on top of Iroh documents."
license = "MIT OR Apache-2.0"

edition.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde", "smallvec/serde", "smallstr/serde"]

[dependencies]
anyhow = "1.0.86"
cobs = "0.2.3"
futures = { version = "0.3.30", default-features = false }
iroh = { version = "0.18.0", default-features = false }
quic-rpc = "0.10.1"
quick_cache = "0.5.1"
serde = { version = "1.0", features = ["derive"], optional = true }
smallstr = "0.3.0"
smallvec = "1.13.2"
ulid = "1.1.2"

[dev-dependencies]
tokio = "1.38.0"
