[package]
name = "leaf-rpc-client-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
iroh-base = "0.22.0"
leaf-rpc-client = { path = "../leaf-rpc-client" }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
