[package]
name = "leaf-rpc-client-cli"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI client for the Leaf RPC server."

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
iroh-base = "0.22.0"
leaf-rpc-client = { path = "../leaf-rpc-client", version = "0.1.0" }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
