[package]
name = "leaf-rpc-client-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive", "env"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
iroh = { version = "0.22.0", default-features = false, features = ["fs-store"] }
leaf-protocol = { path = "../leaf-protocol" }
once_cell = "1.19.0"
ratatui = "0.26.3"
tokio = { version = "1.38.0" }
