[package]
name = "leaf-rpc-client-tui"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI client for the Leaf RPC server."

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive", "env"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
iroh = { version = "0.22.0", default-features = false, features = ["fs-store"] }
leaf-protocol = { path = "../leaf-protocol", version = "0.0.1" }
once_cell = "1.19.0"
ratatui = "0.26.3"
tokio = { version = "1.38.0" }
