[package]
name = "leaf-rpc-client"
description = "Rust client for the Leaf RPC server."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[dependencies]
fastwebsockets = { version = "=0.8.0", features = [
    "upgrade",
    "unstable-split",
] }
hyper = "1.4.1"
tokio = "1.39.2"

anyhow = "1.0.86"
async-stream = "0.3.5"
futures = { version = "0.3.30", default-features = false }
leaf-protocol = { path = "../leaf-protocol", version = "0.0.1", default-features = false }
leaf-rpc-proto = { path = "../leaf-rpc-proto", version = "0.0.1" }
tokio-stream = "0.1.15"
tracing = "0.1.40"
