[package]
name = "leaf-rpc-client"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client for the Leaf RPC server."

[dependencies]
fastwebsockets = { version = "=0.8.0", features = ["upgrade", "unstable-split"] }
hyper = "1.4.1"
tokio = "1.39.2"

anyhow = "1.0.86"
async-stream = "0.3.5"
futures = { version = "0.3.30", default-features = false }
leaf-protocol = { path = "../leaf-protocol", version = "0.1.0", default-features = false }
leaf-rpc-proto = { path = "../leaf-rpc-proto", version = "0.1.0" }
tokio-stream = "0.1.15"
tracing = "0.1.40"
