[package]
name = "leaf-rpc-proto"
description = "Types for the wire protocol of the Leaf RPC server."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
leaf-protocol = { path = "../leaf-protocol", version = "0.0.1", default-features = false }
