[package]
name = "leaf-rpc-proto"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Types for the wire protocol of the Leaf RPC server."

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
leaf-protocol = { path = "../leaf-protocol", version = "0.1.0", default-features = false }
