[package]
name = "leaf-rpc-server"
version = "0.1.0"
default-run = "leaf-rpc-server"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["multipart", "macros"] }
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
fastwebsockets = { version = "0.8.0", features = ["upgrade", "with_axum"] }
futures = { version = "0.3", default-features = false }
headers = "0.4.0"
http = "1.1.0"
hyper = "1.4.1"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
scc = "2.1.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9.34"
spow = "0.2.0"
tokio = { version = "1.37.0", default-features = false, features = ["macros"] }
tower = { version = "0.4.13", features = ["filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

leaf-protocol = { path = "../leaf-protocol" }
leaf-rpc-proto = { path = "../leaf-rpc-proto" }
