[package]
name = "leaf-rpc-server"
version = "0.1.0"
default-run = "leaf-rpc-server"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart", "macros"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
fastwebsockets = { version = "0.8.0", features = ["upgrade", "with_axum"] }
futures = { version = "0.3", default-features = false }
http = "1.1.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

leaf-protocol = { path = "../leaf-protocol" }
leaf-rpc-proto = { path = "../leaf-rpc-proto" }
