[package]
name = "gdata_explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.3"
gdata = { path = "../" }
clap = { version = "4.5.6", features = ["derive", "env"] }
iroh = "0.17.0"
anyhow = "1.0.86"
once_cell = "1.19.0"
tokio = { version = "1.38.0" }
futures-timer = "3.0.3"
futures = "0.3.30"
bytes = "1.6.0"
