[package]
name = "gdata_explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bytes = "1.6.0"
clap = { version = "4.5.6", features = ["derive", "env"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
futures-timer = "3.0.3"
gdata = { path = "../" }
iroh = { version = "0.18.0", default-features = false, features = ["fs-store"] }
once_cell = "1.19.0"
ratatui = "0.26.3"
tokio = { version = "1.38.0" }
