[package]
name = "leaf-protocol-types"
description = "Core types for the leaf protocol."
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
iroh-base = "0.22.0"
