[package]
name = "leaf-protocol-types"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for the leaf protocol."

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
iroh-base = "0.22.0"
